# discord-nlp-bot

./: .env.sample  .gitignore  Cargo.toml  README.md  config.sample.json  flake.nix
.sqlx/: query-04164a12e480fe3fd754e3039bb1264f57e73870dc0d83f5abd953ef7fe43747.json  query-0ad9beb971d5f2e246a85f399b76682791703c8d54dbae884b59194fead72146.json  query-0cd7a957fc074c78ec9d58f181d1350be83cdf942d200f81f241f573d7e5d147.json  query-169783822a0db8db2345c985c6b74d0087a07681ea662bf5ec902358181b83b1.json  query-272fe9545de925ce97744422ea0508f5f399093729a2b7dd834297acb350ff6d.json  query-27c66b2b6c6f8f49b874512cb2d742bb482b57b4c5c9c5882cc5b4bfa8725909.json  query-2be680b98771fbb3f3e342f7abbf7fca72186cfc89dae042286879a9f5f0ee8c.json  query-3063f8cc0fd07b0fb8a31e3a1ddb4d1c0cb9a4615070a5ac28ce465a106d0acd.json  query-3b824bbc2a12a885398da6277c79bd1533503ece79ea6acb60377554f1a3513c.json  query-44707c1a2abd9954cc7a7047d89fafac992e92f1fa0e50f28999a1f8f42a650a.json  query-498a82544323b6a102f2dc573fe6bc3ab0ed9c6cf0c6455be73e89b8f386cb9a.json  query-5d189849f5955ab1b16803bfed3b309b856f192c49ffd6a9a48d15f6311bbcff.json  query-6ddb4c4b44adbc1c858448207eea69059d2e4f88746e22e065108b59acab613a.json  query-71c064fa15ea52c2f8b5884d9d742a002585de068638128936a581584c05b2ee.json  query-80f09550246203bfaefc46a1ea5e1737a8fcd81940f754cccb8372bd05d1ea11.json  query-c9c03219c53edba13115ff367ad0600d7293ed04be83b260847bf676366ffe84.json  (+1 more)
discord_nlp_bot/: Cargo.toml  config.sample.json
discord_nlp_bot/src/: bot.rs  commands.rs  config.rs  file.rs  main.rs  makers.rs  message_formatters.rs
nlp_bot_api/: Cargo.toml
nlp_bot_api/src/: lib.rs
nlp_bot_api/src/displayers/: ascii_table.rs  chart.rs  mod.rs  utils.rs
nlp_bot_api/src/migrations/: 20240121202802_init.sql  20240127180211_rename_messages.sql  20240129194147_add_ngrams_cached.sql  20240131190229_add_ngrams.sql  20240203155048_rename_message_id.sql  20240203203719_add_ngram_length.sql  20240211103956_unique_container.sql  20240211115422_unique_entry_id.sql
nlp_bot_api/src/processor/: container.rs  entry.rs  message.rs  mod.rs  ngram.rs
nlp_bot_api/src/schemas/: database.schema
nlp_bot_api/src/store/: filters.rs  mod.rs  utils.rs
(+12 files in other folders)
