[package]
name = "discord_nlp_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"

nlp_bot_api = { path = "../nlp_bot_api" }
env_logger = "0.10.1"
log = "0.4.20"
