[package]
name = "nlp_bot_api"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_table = "4.0.3"
chrono = "0.4.34"
env_logger = "0.10.1"
image = "0.24.8"
lazy_static = "1.4.0"
log = "0.4.20"
plotters = "0.3.5"
regex = "1.10.3"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "sqlite", "macros" ] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
pedantic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
nursery = "deny"
module_name_repetitions = "allow"
